[gd_scene load_steps=9 format=3 uid="uid://lhqqj6mjge63"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_4v62j"]
[ext_resource type="Texture2D" uid="uid://fs43ork5tdoi" path="res://assets/PNG/Players/Player Blue/playerBlue_walk5.png" id="2_048ew"]
[ext_resource type="Texture2D" uid="uid://rupg8cbeq35d" path="res://assets/PNG/Players/Player Blue/playerBlue_walk4.png" id="3_sbrln"]
[ext_resource type="Texture2D" uid="uid://crcmhv1qfm87s" path="res://assets/PNG/Players/Player Blue/playerBlue_stand.png" id="5_vwsay"]
[ext_resource type="Texture2D" uid="uid://dm38ojqn4e83q" path="res://assets/PNG/Players/Player Blue/playerBlue_dead.png" id="8_mw2c0"]
[ext_resource type="Texture2D" uid="uid://ckcpefbjvmade" path="res://assets/PNG/Items/yellowGem.png" id="9_xagyu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cb5w5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_048ew")
}, {
"duration": 1.0,
"texture": ExtResource("3_sbrln")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_vwsay")
}, {
"duration": 1.0,
"texture": ExtResource("8_mw2c0")
}],
"loop": true,
"name": &"defeat",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5l8dq"]
radius = 18.0
height = 48.0

[node name="EnemyBlue" type="RigidBody2D"]
z_index = -1
collision_layer = 2
collision_mask = 7
gravity_scale = 0.0
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_4v62j")
metadata/enemy_type = 0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1, 1.14)
sprite_frames = SubResource("SpriteFrames_cb5w5")
autoplay = "default"

[node name="EnemyCollider" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_5l8dq")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="KillTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="ConnectionIndicator" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.75, 0.75)
texture = ExtResource("9_xagyu")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="KillTimer" to="." method="_on_kill_timer_timeout"]
